--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ h1 {
 
 .profile__portrait {
   float: left;
-  height: 250px
+  height: 250px;
   width: 250px;
   margin-right: 40px;
   border-radius: 50%;
