--- a/css/style.production.css
+++ b/css/style.production.css
@@ -208,18 +208,27 @@ button:focus,
 /* media queries */
 
 @media all and (max-width: 500px) {
+  .page-header {
+    padding-bottom: 100px;
+  }
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
 @media all and (min-width: 500px) and (max-width: 750px){
+  .page-header {
+    padding-bottom: 100px;
+  }
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
 @media all and (max-width: 750px) {
+  .page-header {
+    padding-bottom: 100px;
+  }
   .grid {
     grid-gap: 10px;
   }
