--- a/css/styles.css
+++ b/css/styles.css
@@ -178,16 +178,25 @@ button:focus,
 /* media queries */
 
 @media all and (max-width: 500px) {
+  .page-header {
+    padding-bottom: 100px;
+  }
   .grid {
     grid-template-columns: 1fr;
   }
 }
 @media all and (min-width: 500px) and (max-width: 750px){
+  .page-header {
+    padding-bottom: 100px;
+  }
   .grid {
     grid-template-columns: 1fr 1fr;
   }
 }
 @media all and (max-width: 750px) {
+  .page-header {
+    padding-bottom: 100px;
+  }
   .grid {
     grid-gap: 10px;
   }
