--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,11 @@ button:focus,
     padding-bottom: 100px;
   }
 
+  .profile__portrait {
+    height: 50px;
+    width: 50px;
+  }
+
   .grid {
     grid-template-columns: 1fr;
   }
@@ -207,6 +212,11 @@ button:focus,
     padding-bottom: 100px;
   }
 
+  .profile__portrait {
+    height: 50px;
+    width: 50px;
+  }
+
   .grid {
     grid-template-columns: 1fr 1fr;
   }
@@ -215,6 +225,11 @@ button:focus,
 @media all and (max-width: 750px) {
   .page-header {
     padding-bottom: 100px;
+  }
+
+  .profile__portrait {
+    height: 50px;
+    width: 50px;
   }
 
   .grid {
